--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Vue 3 Course</title>
+    <title>Illustrations Gallery Vue</title>
   </head>
   <body>
     <div id="app"></div>
